# esp32-temp-humidity-display

./: .gitignore  CMakeLists.txt  REUSE.toml  readme.md  sdkconfig.defaults
.github/workflows/: reuse_compliance_check.yml
LICENSES/: MIT.txt
main/: CMakeLists.txt  DHT11.c  DS18B20.c  DS18B20_ISR.c  devices.c  main.c  onewire_master.c  read_DHT11.c
main/headers/: DS18B20.h  DS18B20_ISR.h  config.h  onewire_master.h  read_DHT11.h
schematic/: ESP32_TempHumidity_Display.fzz
